update long table name

--- a/work2/reports/tables/KNN_legend.tex
+++ b/work2/reports/tables/KNN_legend.tex
@@ -5,7 +5,7 @@ Model Label & K & Distance Func & Voting Func & Weighting Func \\
 \hline
 \endfirsthead
 
-\multicolumn{5}{c}{\	ablename\ \thetable\ -- Continued} \\
+\multicolumn{5}{c}{ KNN Legend -- Continued} \\
 \hline
 Model Label & K & Distance Func & Voting Func & Weighting Func \\
 \hline
