add references and quick review

--- a/work2/reports/01-introduction.tex
+++ b/work2/reports/01-introduction.tex
@@ -13,7 +13,8 @@ Classification is an ideal technique for the required analysis as outlined in th
 
 K-Nearest Neighbour (KNN) is a supervised machine learning algorithm that has been chosen as the primary method for this study.
 It is a simple yet powerful algorithm that classifies new cases based on similarity to existing data points.
-While KNN can be used for both classification and regression problems, our focus is on classification due to the nature of the datasets used.\par
+While KNN can be used for both classification and regression problems, our focus is on classification due to 
+the nature of the datasets used \cite{knn}.\par
 
 This report details the analysis of two datasets: `hepatitis' and `mushroom'. These are two of many datasets provided to us as part of this assignment.
 We decided upon these two datasets due to the stark contrast between them in terms of complexity and size.
