--- a/work2/reports/02-data/02.1-dataset.tex
+++ b/work2/reports/02-data/02.1-dataset.tex
@@ -7,7 +7,7 @@ In this section, we describe the selection criteria that guided our choice of th
 In this project, we aimed to select two datasets that offer substantial variability across different aspects to evaluate the performance of Support Vector Machine (SVM) and k-Nearest Neighbors (KNN) algorithms.
 The criteria for dataset selection were centered around having one dataset that is small and another that is large, allowing us to analyze both the efficiency and effectiveness of these models across differing dataset sizes.
 A smaller dataset, enables rapid experimentation and comparison of SVM and KNN performance.
-Meanwhile, a larger dataset, provides an excellent opportunity to evaluate the benefits of reduction methods in KNN, especially regarding storage efficiency and reduced running time.
+Meanwhile, a larger dataset, provides an excellent opportunity to evaluate the benefits of reduction methods in KNN, especially regarding storage efficiency and reduced running time \cite{distance_func_knn}.
 
 Moreover, we wanted to assess the models' ability to handle datasets with different types of attributes.
 For this purpose, we wanted to select one dataset with primarily nominal attributes and another with numerical features.
