add references and quick review

--- a/work2/reports/01-introduction.tex
+++ b/work2/reports/01-introduction.tex
@@ -7,14 +7,10 @@ Machine learning classification algorithms play a crucial role in modern data an
 
 Classification algorithms assign predefined categories to data points based on their features. While many sophisticated classification methods exist, KNN and SVM remain widely used due to their interpretability and strong theoretical foundations. KNN operates by examining the closest training examples to make predictions, while SVM finds optimal hyperplanes to separate classes in feature space.
 
-<<<<<<< HEAD
-K-Nearest Neighbour (KNN) is a supervised machine learning algorithm that has been chosen as the primary method for this study.
-It is a simple yet powerful algorithm that classifies new cases based on similarity to existing data points.
-While KNN can be used for both classification and regression problems, our focus is on classification due to 
-the nature of the datasets used \cite{knn}.\par
-=======
-A key challenge with instance-based methods like KNN is their computational and storage requirements, particularly for large datasets. Instance reduction techniques address this limitation by identifying and preserving only the most informative training examples, potentially improving both efficiency and generalization.
->>>>>>> 44b6abc19b24bcd22d2fd018bbbbae03100de9f4
+A key challenge with instance-based methods like KNN is their computational and storage requirements, 
+particularly for large datasets. Instance reduction techniques address this limitation by identifying 
+and preserving only the most informative training examples, potentially improving both efficiency 
+and generalization \cite{knn}.
 
 \subsection{Research Objectives}
 
