add references and quick review

--- a/work2/reports/references.bib
+++ b/work2/reports/references.bib
@@ -248,3 +248,14 @@ title={An Euclidean Distance Based on Tensor Product Graph Diffusion Related Att
   pages={2201--2206},
   year={2016}
 }
+
+@article{data_preprocess,
+  title={Review of data preprocessing techniques in data mining},
+  author={Alasadi, Suad A and Bhaya, Wesam S},
+  journal={Journal of Engineering and Applied Sciences},
+  volume={12},
+  number={16},
+  pages={4102--4107},
+  year={2017}
+}
+
