--- a/work2/reports/tables/svm_results_mushroom.tex
+++ b/work2/reports/tables/svm_results_mushroom.tex
@@ -2,20 +2,20 @@
 \centering
 \caption{Results From Svm Models For The Mushroom Dataset}
 \label{tab:svm_results_mushroom}
-\begin{tabular}{rrlrrr}
+\begin{tabular}{rlrrr}
 \toprule
- & C & kernel type & mean f1 & mean train time & mean test time \\
+ & Model Label & Mean F1 & Mean Train Time (s) & Mean Test Time (s) \\
 \midrule
-1 & 3 & poly & 1.000 & 0.116 & 0.004 \\
-2 & 5 & poly & 1.000 & 0.115 & 0.003 \\
-3 & 7 & poly & 1.000 & 0.117 & 0.003 \\
-4 & 5 & rbf & 1.000 & 0.101 & 0.014 \\
-5 & 7 & rbf & 1.000 & 0.093 & 0.012 \\
-6 & 3 & rbf & 0.999 & 0.121 & 0.018 \\
-7 & 1 & poly & 0.999 & 0.129 & 0.008 \\
-8 & 1 & rbf & 0.989 & 0.178 & 0.030 \\
-9 & 7 & linear & 0.983 & 1.623 & 0.015 \\
-10 & 5 & linear & 0.983 & 1.185 & 0.013 \\
+1 & C3Poly & 1.000000 & 0.115836 & 0.004170 \\
+2 & C5Poly & 1.000000 & 0.115007 & 0.003282 \\
+3 & C7Poly & 1.000000 & 0.117010 & 0.002885 \\
+4 & C5Rbf & 0.999618 & 0.101061 & 0.013750 \\
+5 & C7Rbf & 0.999618 & 0.093485 & 0.011688 \\
+6 & C3Rbf & 0.998726 & 0.121047 & 0.017937 \\
+7 & C1Poly & 0.998590 & 0.129277 & 0.007546 \\
+8 & C1Rbf & 0.989052 & 0.177867 & 0.030314 \\
+9 & C7Lin & 0.982785 & 1.622979 & 0.015228 \\
+10 & C5Lin & 0.982752 & 1.184926 & 0.012647 \\
 \bottomrule
 \end{tabular}
 \end{table}
