--- a/work2/reports/tables/SVM-Reduction_legend.tex
+++ b/work2/reports/tables/SVM-Reduction_legend.tex
@@ -6,10 +6,10 @@
 \toprule
 Model Label & C & Kernel Type \\
 \midrule
-CtrlC7Rbf & 7 & rbf \\
-EnnthC7Rbf & 7 & rbf \\
-GgcnC7Rbf & 7 & rbf \\
-Drop3C7Rbf & 7 & rbf \\
+CtrlC3Poly & 3 & poly \\
+EnnthC3Poly & 3 & poly \\
+Drop3C3Poly & 3 & poly \\
+GgcnC3Poly & 3 & poly \\
 \bottomrule
 \end{tabular}
 \end{table}
