--- a/work2/reports/tables/knn_results_mushroom.tex
+++ b/work2/reports/tables/knn_results_mushroom.tex
@@ -2,20 +2,20 @@
 \centering
 \caption{Results From Knn Models For The Mushroom Dataset}
 \label{tab:knn_results_mushroom}
-\begin{tabular}{rrlllrrr}
+\begin{tabular}{rlrrr}
 \toprule
- & k & distance func & voting func & weighting func & mean f1 & mean train time & mean test time \\
+ & Model Label & Mean F1 & Mean Train Time (s) & Mean Test Time (s) \\
 \midrule
-1 & 1 & ManhattanDistance & MajorityClassVote & EqualWeighting & 1.000 & 0.000 & 15.225 \\
-2 & 3 & EuclideanDistance & InverseDistanceWeightedVote & EqualWeighting & 1.000 & 0.000 & 17.753 \\
-3 & 1 & EuclideanDistance & MajorityClassVote & EqualWeighting & 1.000 & 0.000 & 17.891 \\
-4 & 1 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 1.000 & 0.000 & 15.545 \\
-5 & 1 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 1.000 & 0.000 & 14.988 \\
-6 & 1 & EuclideanDistance & InverseDistanceWeightedVote & EqualWeighting & 1.000 & 0.000 & 17.843 \\
-7 & 3 & ManhattanDistance & MajorityClassVote & EqualWeighting & 1.000 & 0.000 & 14.979 \\
-8 & 3 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 1.000 & 0.000 & 15.154 \\
-9 & 3 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 1.000 & 0.000 & 15.163 \\
-10 & 3 & EuclideanDistance & MajorityClassVote & EqualWeighting & 1.000 & 0.000 & 18.055 \\
+1 & k1ManMajEq & 1.000000 & 0.000251 & 15.225325 \\
+2 & k3EucDisEq & 1.000000 & 0.000196 & 17.752951 \\
+3 & k1EucMajEq & 1.000000 & 0.000225 & 17.891188 \\
+4 & k1ManDisEq & 1.000000 & 0.000264 & 15.544714 \\
+5 & k1ManShpEq & 1.000000 & 0.000246 & 14.987898 \\
+6 & k1EucDisEq & 1.000000 & 0.000234 & 17.843295 \\
+7 & k3ManMajEq & 1.000000 & 0.000200 & 14.979317 \\
+8 & k3ManDisEq & 1.000000 & 0.000217 & 15.154011 \\
+9 & k3ManShpEq & 1.000000 & 0.000227 & 15.163488 \\
+10 & k3EucMajEq & 1.000000 & 0.000211 & 18.054825 \\
 \bottomrule
 \end{tabular}
 \end{table}
