--- a/work2/reports/tables/svm_reduction_results_hepatitis.tex
+++ b/work2/reports/tables/svm_reduction_results_hepatitis.tex
@@ -1,15 +1,15 @@
 \begin{table}
 \centering
-\caption{Results From Svm Models For The Hepatitis Dataset With Dimensionality Reduction}
+\caption{Results From Svm-Reduction Models For The Hepatitis Dataset}
 \label{tab:svm_reduction_results_hepatitis}
-\begin{tabular}{rlrlrrrr}
+\begin{tabular}{rlrrr}
 \toprule
- & reduction func & C & kernel type & mean f1 & mean train time & mean test time & mean storage \\
+ & Model Label & Mean F1 & Mean Train Time (s) & Mean Test Time (s) \\
 \midrule
-1 & control & 7 & rbf & 0.975 & 0.001 & 0.000 & 139.500 \\
-2 & ENNTH & 7 & rbf & 0.975 & 0.001 & 0.000 & 139.500 \\
-3 & GGCN & 7 & rbf & 0.963 & 0.001 & 0.000 & 103.200 \\
-4 & Drop3 & 7 & rbf & 0.929 & 0.001 & 0.000 & 110.900 \\
+1 & CtrlC7Rbf & 0.975310 & 0.000852 & 0.000368 \\
+2 & EnnthC7Rbf & 0.975310 & 0.000776 & 0.000330 \\
+3 & GgcnC7Rbf & 0.963282 & 0.000764 & 0.000369 \\
+4 & Drop3C7Rbf & 0.928879 & 0.000599 & 0.000321 \\
 \bottomrule
 \end{tabular}
 \end{table}
