--- a/work2/reports/tables/svm_results_hepatitis.tex
+++ b/work2/reports/tables/svm_results_hepatitis.tex
@@ -2,20 +2,20 @@
 \centering
 \caption{Results From Svm Models For The Hepatitis Dataset}
 \label{tab:svm_results_hepatitis}
-\begin{tabular}{rrlrrr}
+\begin{tabular}{rlrrr}
 \toprule
- & C & kernel type & mean f1 & mean train time & mean test time \\
+ & Model Label & Mean F1 & Mean Train Time (s) & Mean Test Time (s) \\
 \midrule
-1 & 7 & rbf & 0.975 & 0.001 & 0.000 \\
-2 & 5 & rbf & 0.971 & 0.001 & 0.000 \\
-3 & 3 & poly & 0.970 & 0.001 & 0.000 \\
-4 & 1 & poly & 0.970 & 0.001 & 0.000 \\
-5 & 3 & rbf & 0.969 & 0.001 & 0.000 \\
-6 & 5 & poly & 0.969 & 0.001 & 0.000 \\
-7 & 7 & poly & 0.969 & 0.001 & 0.000 \\
-8 & 1 & rbf & 0.942 & 0.001 & 0.000 \\
-9 & 3 & linear & 0.929 & 0.001 & 0.000 \\
-10 & 1 & linear & 0.927 & 0.001 & 0.000 \\
+1 & C7Rbf & 0.975310 & 0.000794 & 0.000310 \\
+2 & C5Rbf & 0.970963 & 0.000793 & 0.000309 \\
+3 & C3Poly & 0.969933 & 0.000779 & 0.000280 \\
+4 & C1Poly & 0.969585 & 0.000854 & 0.000308 \\
+5 & C3Rbf & 0.968827 & 0.000786 & 0.000309 \\
+6 & C5Poly & 0.968619 & 0.000786 & 0.000283 \\
+7 & C7Poly & 0.968619 & 0.000791 & 0.000285 \\
+8 & C1Rbf & 0.941981 & 0.000788 & 0.000322 \\
+9 & C3Lin & 0.928667 & 0.000754 & 0.000282 \\
+10 & C1Lin & 0.927338 & 0.000946 & 0.000374 \\
 \bottomrule
 \end{tabular}
 \end{table}
