--- a/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
+++ b/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
@@ -6,7 +6,7 @@ This section interprets the results of the KNN algorithm, discussing its perform
 The KNN algorithm was evaluated using several performance metrics, including accuracy, precision, and recall and the f1 score.
 
 \subsubsection*{General Performance Analysis}
-As seen in Tables 1 and 2, the general performance of the KNN algorithm was excellent across both datasets,
+As seen in Tables \ref{tab:knn_results_hepatitis} and \ref{tab:knn_results_mushroom}, the general performance of the KNN algorithm was excellent across both datasets,
 achieving accuracy scores above 92\% and F1 scores above 92.5\% on all top ten configurations.
 
 \subsubsection{Mushroom Dataset Performance}
@@ -39,7 +39,7 @@ configurations that could also achieve a perfect F1 score on this dataset.
     \label{fig:ranked_folds_KNN_mushroom}
 \end{figure}
 
-The above figure shows the ranked folds for the k-NN algorithm on the mushroom dataset.
+\autoref{fig:ranked_folds_KNN_mushroom} shows the ranked folds for the k-NN algorithm on the mushroom dataset.
 The figure illustrates the variation in performance across different KNN models, with some models performing 
 better than others. It's evident a lower value of k (1 or 3) tends to perform better than higher values of k (5 or 7)
 in combination with the other parameters. 
@@ -83,7 +83,7 @@ As also seen in the mushroom dataset, the F1 scores achieved across all configur
     \label{fig:ranked_folds_KNN_hepatitis}
 \end{figure}
 
-The above figure shows the ranked folds for the k-NN algorithm on the hepatitis dataset.
+\autoref{fig:ranked_folds_KNN_hepatitis} shows the ranked folds for the k-NN algorithm on the hepatitis dataset.
 The figure illustrates the variation in performance across different KNN models, with some models outperforming others.
 Unlike the mushroom dataset, the hepatitis dataset shows variation in performance in each model per fold.
 A number of the models showed consistent mean performance but also contained some outliers that performed significantly better or worse
@@ -146,7 +146,7 @@ We can deduce that the k-value has a substantial impact on model performance on 
     \centering
     \includegraphics[width=0.8\textwidth]{figures/interaction_effects_KNN_hepatitis.png}
     \caption{Interaction effects for KNN models on the hepatitis dataset}
-\label{fig:interaction_effects_KNN_hepatitis}
+    \label{fig:interaction_effects_KNN_hepatitis}
 \end{figure}
 
 To further understand the impact of the parameters on the performance of the KNN algorithm,
