add storage to reduction results

--- a/work2/reports/tables/knn_results_hepatitis.tex
+++ b/work2/reports/tables/knn_results_hepatitis.tex
@@ -1,4 +1,4 @@
-.\begin{table}
+\begin{table}
 \centering
 \caption{Results From Knn Models For The Hepatitis Dataset}
 \label{tab:knn_results_hepatitis}
