--- a/work2/reports/tables/svm_reduction_results_mushroom.tex
+++ b/work2/reports/tables/svm_reduction_results_mushroom.tex
@@ -2,14 +2,14 @@
 \centering
 \caption{Results From Svm-Reduction Models For The Mushroom Dataset}
 \label{tab:svm_reduction_results_mushroom}
-\begin{tabular}{rlrrr}
+\begin{tabular}{rlrrrr}
 \toprule
- & Model Label & Mean F1 & Mean Train Time (s) & Mean Test Time (s) \\
+ & Model Label & Mean F1 & Mean Train Time (s) & Mean Test Time (s) & Mean Storage \\
 \midrule
-1 & CtrlC3Poly & 1.000000 & 0.117731 & 0.004207 \\
-2 & EnnthC3Poly & 1.000000 & 0.116208 & 0.004144 \\
-3 & Drop3C3Poly & 1.000000 & 0.116228 & 0.004156 \\
-4 & GgcnC3Poly & 0.967235 & 0.038349 & 0.003370 \\
+1 & CtrlC3Poly & 1.000000 & 0.117731 & 0.004207 & 7311.600000 \\
+2 & EnnthC3Poly & 1.000000 & 0.116208 & 0.004144 & 7311.600000 \\
+3 & Drop3C3Poly & 1.000000 & 0.116228 & 0.004156 & 7311.600000 \\
+4 & GgcnC3Poly & 0.967235 & 0.038349 & 0.003370 & 3519.800000 \\
 \bottomrule
 \end{tabular}
 \end{table}
