--- a/work2/notebooks/1.2-ZachParent-add-per-fold-results.ipynb
+++ b/work2/notebooks/1.2-ZachParent-add-per-fold-results.ipynb
@@ -232,7 +232,7 @@
     "\n",
     "    reduction_funcs = {\n",
     "        \"control\": lambda x, y, z, s: (x, y),\n",
-    "        \"GGCN\": GCNN,\n",
+    "        \"GCNN\": GCNN,\n",
     "        \"ENNTH\": ENNTH,\n",
     "        \"Drop3\": drop3,\n",
     "    }\n",
