--- a/work2/reports/tables/KNN-Reduction_legend.tex
+++ b/work2/reports/tables/KNN-Reduction_legend.tex
@@ -7,7 +7,7 @@
 Model Label & K & Distance Func & Voting Func & Weighting Func \\
 \midrule
 Ctrlk1ManMajEq & 1 & ManhattanDistance & MajorityClassVote & EqualWeighting \\
-Ggcnk1ManMajEq & 1 & ManhattanDistance & MajorityClassVote & EqualWeighting \\
+Gcnnk1ManMajEq & 1 & ManhattanDistance & MajorityClassVote & EqualWeighting \\
 Ennthk1ManMajEq & 1 & ManhattanDistance & MajorityClassVote & EqualWeighting \\
 Drop3k1ManMajEq & 1 & ManhattanDistance & MajorityClassVote & EqualWeighting \\
 \bottomrule
