--- a/work2/reports/tables/SVM-Reduction_legend.tex
+++ b/work2/reports/tables/SVM-Reduction_legend.tex
@@ -7,7 +7,7 @@
 Model Label & C & Kernel Type \\
 \midrule
 CtrlC7Rbf & 7 & rbf \\
-GgcnC7Rbf & 7 & rbf \\
+GcnnC7Rbf & 7 & rbf \\
 EnnthC7Rbf & 7 & rbf \\
 Drop3C7Rbf & 7 & rbf \\
 \bottomrule
