--- a/work2/reports/04-results-and-analysis/04.2.3-discussion-reduction.tex
+++ b/work2/reports/04-results-and-analysis/04.2.3-discussion-reduction.tex
@@ -1,7 +1,7 @@
 \subsubsection{Instance Reduction Analysis}
 \label{subsubsec:discussion-reduction}
 
-This section examines the impact of three reduction techniques—GGCN, ENNTH, and Drop3—on the performance, training time, testing time, and storage requirements of both the KNN and SVM algorithms.
+This section examines the impact of three reduction techniques—GCNN, ENNTH, and Drop3—on the performance, training time, testing time, and storage requirements of both the KNN and SVM algorithms.
 
 
 
