--- a/work2/reports/tables/knn_reduction_results_hepatitis.tex
+++ b/work2/reports/tables/knn_reduction_results_hepatitis.tex
@@ -8,7 +8,7 @@
 \midrule
 1 & Ctrlk1ManMajEq & 0.969231 & 0.000056 & 0.007470 & 139.500000 \\
 2 & Ennthk1ManMajEq & 0.969231 & 0.000042 & 0.007297 & 139.500000 \\
-3 & Ggcnk1ManMajEq & 0.960765 & 0.000042 & 0.005446 & 103.200000 \\
+3 & Gcnnk1ManMajEq & 0.960765 & 0.000042 & 0.005446 & 103.200000 \\
 4 & Drop3k1ManMajEq & 0.915608 & 0.000052 & 0.006057 & 110.900000 \\
 \bottomrule
 \end{tabular}
