--- a/work2/reports/tables/knn_reduction_results_mushroom.tex
+++ b/work2/reports/tables/knn_reduction_results_mushroom.tex
@@ -7,7 +7,7 @@
  & Model Label & Mean F1 & Mean Train Time (s) & Mean Test Time (s) & Mean Storage \\
 \midrule
 1 & Ctrlk1ManMajEq & 1.000000 & 0.000151 & 15.164845 & 7311.600000 \\
-2 & Ggcnk1ManMajEq & 1.000000 & 0.000107 & 7.277776 & 3519.800000 \\
+2 & Gcnnk1ManMajEq & 1.000000 & 0.000107 & 7.277776 & 3519.800000 \\
 3 & Ennthk1ManMajEq & 1.000000 & 0.000241 & 15.090724 & 7311.600000 \\
 4 & Drop3k1ManMajEq & 1.000000 & 0.000185 & 15.079619 & 7311.600000 \\
 \bottomrule
