--- a/work2/reports/tables/svm_reduction_results_hepatitis.tex
+++ b/work2/reports/tables/svm_reduction_results_hepatitis.tex
@@ -8,7 +8,7 @@
 \midrule
 1 & CtrlC7Rbf & 0.975310 & 0.000852 & 0.000368 & 139.500000 \\
 2 & EnnthC7Rbf & 0.975310 & 0.000776 & 0.000330 & 139.500000 \\
-3 & GgcnC7Rbf & 0.963282 & 0.000764 & 0.000369 & 103.200000 \\
+3 & GcnnC7Rbf & 0.963282 & 0.000764 & 0.000369 & 103.200000 \\
 4 & Drop3C7Rbf & 0.928879 & 0.000599 & 0.000321 & 110.900000 \\
 \bottomrule
 \end{tabular}
